<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.alaricosong.myfavoriteplaces.CadastroLocaisActivity"
        tools:showIn="@layout/act_cad_locais"
        tools:ignore="ExtraText">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="225dp">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/ic_mapa"
                android:background="#00A8Ec"/>

            <Button
                android:id="@+id/btn_photo"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/fundo_camera"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/lnl_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_place"
                tools:text="@string/lbl_place" />

            <EditText
                android:id="@+id/txt_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnl_adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_adress"
                tools:text="@string/lbl_adress" />

            <EditText
                android:id="@+id/txt_adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnl_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_city"
                tools:text="@string/lbl_city" />

            <EditText
                android:id="@+id/txt_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnl_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_phone"
                tools:text="@string/lbl_phone" />

            <EditText
                android:id="@+id/txt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnl_site"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_site"
                tools:text="@string/lbl_site" />

            <EditText
                android:id="@+id/txt_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/lnl_last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_last"
                tools:text="@string/lbl_last" />

            <EditText
                android:id="@+id/txt_last"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnl_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RatingBar
                android:id="@+id/rb_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:numStars="5"
                android:max="10"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>